Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.8.0
-
None
Description
This was in an exhaustive release build: http://sandbox.jenkins.cloudera.com/job/impala-asf-master-exhaustive-release/127
1 tests failed. FAILED: MemPoolTest.TryAllocateAligned Error Message: Value of: reinterpret_cast<uintptr_t>(ptr) % alignment Actual: 16 Expected: 0 Stack Trace: /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/runtime/mem-pool-test.cc:508 Value of: reinterpret_cast<uintptr_t>(ptr) % alignment Actual: 16 Expected: 0